# tokentango

./: .gitignore  README.md  agent.md  bpe_tokenizer.json  checkpoint_test_results.csv  checkpoint_test_results_rs69.csv  fake_news_bert.ipynb  fake_news_bert.py  notify_and_rerun.fish  pyproject.toml  train_mlm_comp.sh  train_once.sh  train_opt_comp.sh  trivial_bert.ipynb  vise-versa.sh
.ipynb_checkpoints/: fake_news_bert-checkpoint.ipynb  trivial_bert-checkpoint.ipynb
notebooks/: diffusion.ipynb  fake_news_bert.ipynb  trivial_bert.ipynb  very_experimental.ipynb  visualize_mlm.py
scripts/: fake_news_bert.py  fake_news_bert_jax.py  inspect_checkpoints.py  plot_checkpoint_accuracy.py  test_checkpoints.py
src/tokentango/: __init__.py  bert_from_scratch.py  config.py  data.py  fake_news.py  main.py  model.py  model_jax.py  train.py  train_jax.py
