[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tokentango"
version = "0.1.0"
description = "Experimenting with bidirectional encoder transformers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "plotly>=6.1.2",
    "scikit-learn>=1.7.0",
    "tokenizers>=0.21.1",
    "torch>=2.7.1",
]
