[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tokentango"
version = "0.1.0"
description = "Experimenting with bidirectional encoder transformers"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "equinox>=0.13.4",
    "flax>=0.12.4",
    "jax>=0.9.0.1",
    "jaxtyping>=0.3.9",
    "jupyter>=1.1.1",
    "marimo>=0.19.5",
    "matplotlib>=3.10.3",
    #   "muon-optimizer",
    "numpy>=2.3.0",
    "optax>=0.2.6",
    "orbax-checkpoint>=0.11.33",
    "pandas>=2.3.0",
    "plotly>=6.1.2",
    "scikit-learn>=1.7.0",
    "tokenizers>=0.21.1",
    #   "torchvision>=0.22.1",
    "torch>=2.7.1",
]

#[tool.uv.sources]
#muon-optimizer = { git = "https://github.com/KellerJordan/Muon" }
#torch = { index = "pytorch-cu118" }

[tool.ty.environment]
python = ".venv"

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
